--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,5 +1,77 @@
-.flag {
-  width:150px;
-  height:75px;
-  background:red;
+$flagWidth: 150px;
+$flagHeight: 75px;
+$columnThird: ($flagWidth / 3);
+$lineThird: ($flagHeight / 3);
+
+// Three equal vertical stripes
+@mixin stripes-vertical-three(color1, color2, color3) {
+  border-right:$columnThird solid color1;
+  background:color2;
+  border-left: $columnThird solid color3;
 }
+// Symbol in central column
+@mixin symbol-central-column(symbol, color) {
+    content:$symbol;
+    color:$color;
+    font-size:40px;
+    display:block;
+    height:$flagHeight;
+    line-height:$flagHeight;
+    width:$columnThird;
+    text-align:center;
+}
+
+
+.flag {
+  width:$flagWidth;
+  height:$flagHeight;
+  box-sizing: border-box;
+  margin:10px;
+  position:relative;
+}
+
+/**
+ * Three columns
+ **/
+
+// Belgium
+.flag-be {
+  @include stripes-vertical-three(black, yellow, red);
+}
+
+// Ivory Coast
+.flag-ci {
+  @include stripes-vertical-three(orange, white, green);
+}
+
+
+// France
+.flag-fr {
+  @include stripes-vertical-three(red, white, blue);
+}
+
+/**
+ * Three columns with a symbol
+ **/
+
+// Afghanistan
+// TODO: Need center symbol
+.flag-af {
+  @include stripes-vertical-three(black, red, green);
+}
+
+// Canary Islands
+// TODO: Need center symbol
+.flag-ic {
+  @include stripes-vertical-three(white, blue, yellow);
+}
+
+// Cameroon
+.flag-cm {
+  &:before {
+    @include symbol-central-column("★", yellow)
+  }
+  @include stripes-vertical-three(green, red, yellow);
+
+}
+
