Splitting in several files.

--- a/app/css/main.scss
+++ b/app/css/main.scss
@@ -1,984 +1,5 @@
-@font-face {
-	font-family: "Symbolsxxx";
-	src: url("./fonts/Symbols.eot");
-	src: url("./fonts/Symbols.eot#iefix") format("embedded-opentype"),
-	url("./fonts/Symbols.woff") format("woff"),
-	url("./fonts/Symbols.ttf") format("truetype"),
-	url("./fonts/Symbols.svg") format("svg");
-	font-weight: normal;
-	font-style: normal;
-}
-
-/* VARIABLES */
-$flagWidth: 220px;
-$flagHeight: 160px;
-$columnThird: ($flagWidth / 3);
-$lineThird: ($flagHeight / 3);
-
-/**
- * Star and crescent : ☪
- * ★☆☨☬☭☽☾♢♦⚙⚜⚫⚪
- **/
-
-/* MIXINS */
-
-// Three equal vertical stripes
-@mixin stripes-vertical-three($color1, $color2, $color3) {
-  border-left:$columnThird solid $color1;
-  background:$color2;
-  border-right: $columnThird solid $color3;
-}
-// Symbol in central column
-@mixin symbol-central-column($symbol, $color) {
-    content:$symbol;
-    color:$color;
-    font-size:4em;
-    display:block;
-    height:$flagHeight;
-    line-height:$flagHeight;
-    width:$columnThird;
-    text-align:center;
-}
-// Three equal horizontal stripes
-@mixin stripes-horizontal-three($color1, $color2, $color3) {
-  border-top:$lineThird solid $color1;
-  background:$color2;
-  border-bottom: $lineThird solid $color3;
-}
-// Symbol in central line
-@mixin symbol-central-line($symbol, $color) {
-    content:$symbol;
-    color:$color;
-    font-size:4em;
-    display:block;
-    height:$lineThird;
-    line-height:$lineThird;
-    text-align:center;
-}
-
-/**
- * Nordic cross, like Sweden, Norway or Finland.
- *
- * 1. Three horizontal stripes
- * 2. Vertical bar for the cross
- **/
-@mixin nordic-cross($background-color, $cross-color) {
-  $x: $flagWidth / 7;
-  $y: $flagHeight / 5;
-
-  background:$cross-color; /* 1 */
-  border-top: (2 * $y) solid $background-color; /* 1 */
-  border-bottom:(2 * $y) solid $background-color; /* 1 */
-  &:before {
-    content:"";
-    position:absolute;
-    display:block;
-    background:$cross-color; /* 2 */
-    width: $y; /* 2 */
-    height:$flagHeight; /* 2 */
-    top: -(2 * $y); /* 2 */
-    left: (2 * $x); /* 2 */
-  }
-}
-/**
- * Nordic cross with borders.
- *
- * We set a background color and will the define the cross by positioning
- * 4 squares in the 4 angles, each composed of a filled box-shadow and 3 border
- * box-shadow.
- **/
-@mixin nordic-cross-border($background-color, $cross-color, $border-color) {
-  $x: $flagWidth / 22;
-  background:$cross-color;
-  overflow:hidden;
-  &:before {
-    content:"";
-    position:absolute;
-    top:0;
-    right:0;
-    width:(12 * $x);
-    height:(6 * $x);
-    background:$background-color;
-    box-shadow:0px $x 0px $border-color,  /* Bottom */
-               -$x 0px 0px $border-color, /* Left */
-               -$x $x 0px $border-color, /* Bottom-left corner */
-
-               /* Bottom right */
-               0px (10 * $x) 0px $background-color, /* Background */
-               0px (9 * $x) 0px $border-color, /* Top */
-               -$x (10 * $x) 0px $border-color, /* Left */
-               -$x (9 * $x) 0px $border-color, /* Top-left corner */
-
-               /* Top left */
-               (-16 * $x) 0px 0px $background-color, /* Background */
-               (-16 * $x) $x 0px $border-color, /* Bottom */
-               (-15 * $x) 0px 0px $border-color, /* Right */
-               (-15 * $x) $x 0px $border-color, /* Bottom-right corner */
-
-               /* Bottom left */
-               (-16 * $x) (10 * $x) 0px $background-color, /* Background */
-               (-16 * $x) (9 * $x) 0px $border-color, /* Top */
-               (-15 * $x) (10 * $x) 0px $border-color, /* Right */
-               (-15 * $x) (9 * $x) 0px $border-color; /* Top-right corner */
-  }
-}
-
-/* LAYOUT */
-
-* {
-  box-sizing: border-box;
-}
-body {
-  font-family:Verdana;
-}
-
-.flag-list {
-  list-style:none;
-  li {
-    float:left;
-    display:block;
-    padding:10px;
-    border:1px solid grey;
-    border-radius:5px;
-    margin-right:5px;
-    margin-bottom:5px;
-  }
-  strong {
-    display:block;
-    text-align:center;
-    height:20px;
-    width:$flagWidth;
-    overflow:hidden;
-    margin-top:10px;
-  }
-}
-
-/* FLAGS */
-
-.flag {
-  width:$flagWidth;
-  height:$flagHeight;
-  position:relative;
-}
-
-// Afghanistan
-// TODO: Incomplete
-.flag-afg {
-  @include stripes-vertical-three(black, #BF0000, #009900);
-}
-// Åland Islands
-.flag-ala {
-  @include nordic-cross-border(#0053A5, #D21034, #FFCE00);
-}
-// Albania
-// TODO: Incomplet
-.flag-alb {
-  background:#E41E20;
-}
-// Algeria
-/**
- * Two large borders to make the two columns. And an UTF-8 symbol vertically
- * and horizontally centered
- **/
-.flag-dza {
-  border-left:($flagWidth / 2) solid #006233;
-  border-right:($flagWidth /2) solid white;
-  &:before {
-    content: "☪";
-    color: #D21034;
-    position: absolute;
-    display: block;
-    top: 0px;
-    left: -($flagWidth / 2);
-    width:$flagWidth;
-    height: $flagHeight;
-    line-height: $flagHeight;
-    text-align: center;
-    font-size: 7em;
-  }
-}
-// American Samoa
-.flag-asm {
-}
-// Andorra
-.flag-and {
-}
-// Angola
-.flag-ago {
-}
-// Anguilla
-.flag-aia {
-}
-// Antarctica
-.flag-ata {
-}
-// Antigua and Barbuda
-.flag-atg {
-}
-// Argentina
-.flag-arg {
-}
-// Armenia
-.flag-arm {
-  @include stripes-horizontal-three(#D90012, #0033A0, #F2A800);
-}
-// Aruba
-.flag-abw {
-}
-// Australia
-.flag-aus {
-}
-// Austria
-.flag-aut {
-}
-// Azerbaijan
-.flag-aze {
-}
-// Bahamas
-.flag-bhs {
-}
-// Bahrain
-.flag-bhr {
-}
-// Bangladesh
-.flag-bgd {
-}
-// Barbados
-.flag-brb {
-}
-// Belarus
-.flag-blr {
-}
-// Belgium
-.flag-bel {
-  @include stripes-vertical-three(black, #FAE042, #ED2939);
-}
-// Belize
-.flag-blz {
-}
-// Benin
-.flag-ben {
-}
-// Bermuda
-.flag-bmu {
-}
-// Bhutan
-.flag-btn {
-}
-// Bolivia, Plurinational State of
-.flag-bol {
-  @include stripes-horizontal-three(#D52B1E, #FFE000, #007934);
-}
-// Bonaire, Sint Eustatius and Saba
-.flag-bes {
-}
-// Bosnia and Herzegovina
-.flag-bih {
-}
-// Botswana
-.flag-bwa {
-}
-// Bouvet Island
-.flag-bvt {
-}
-// Brazil
-.flag-bra {
-}
-// British Indian Ocean Territory
-.flag-iot {
-}
-// Brunei Darussalam
-.flag-brn {
-}
-// Bulgaria
-.flag-bgr {
-  @include stripes-horizontal-three(white, #00966E, #D62612);
-}
-// Burkina Faso
-.flag-bfa {
-}
-// Burundi
-.flag-bdi {
-}
-// Cambodia
-.flag-khm {
-}
-// Cameroon
-.flag-cmr {
-  @include stripes-vertical-three(#007A5E, #CE1126, #FCD116);
-  &:before {
-    @include symbol-central-column("★", #FCD116)
-  }
-}
-// Canada
-.flag-can {
-}
-// Cape Verde
-.flag-cpv {
-}
-// Cayman Islands
-.flag-cym {
-}
-// Central African Republic
-.flag-caf {
-}
-// Chad
-.flag-tcd {
-  @include stripes-vertical-three(#002664, #FECB00, #C60C30);
-}
-// Chile
-.flag-chl {
-}
-// China
-.flag-chn {
-}
-// Christmas Island
-.flag-cxr {
-}
-// Cocos (Keeling) Islands
-.flag-cck {
-}
-// Colombia
-.flag-col {
-}
-// Comoros
-.flag-com {
-}
-// Congo
-.flag-cog {
-}
-// Congo, the Democratic Republic of the
-.flag-cod {
-}
-// Cook Islands
-.flag-cok {
-}
-// Costa Rica
-.flag-cri {
-}
-// Côte d'Ivoire
-.flag-civ {
-  @include stripes-vertical-three(#F77F00, white, #009E60);
-}
-// Croatia
-.flag-hrv {
-}
-// Cuba
-.flag-cub {
-}
-// Curaçao
-.flag-cuw {
-}
-// Cyprus
-.flag-cyp {
-}
-// Czech Republic
-.flag-cze {
-}
-// Denmark
-.flag-dnk {
-  @include nordic-cross(#C60C30, white);
-}
-// Djibouti
-.flag-dji {
-}
-// Dominica
-.flag-dma {
-}
-// Dominican Republic
-.flag-dom {
-}
-// Ecuador
-.flag-ecu {
-}
-// Egypt
-.flag-egy {
-}
-// El Salvador
-.flag-slv {
-}
-// Equatorial Guinea
-.flag-gnq {
-}
-// Eritrea
-.flag-eri {
-}
-// Estonia
-.flag-est {
-  @include stripes-horizontal-three(#4891D9, black, white);
-}
-// Ethiopia
-.flag-eth {
-}
-// Falkland Islands (Malvinas)
-.flag-flk {
-}
-// Faroe Islands
-.flag-fro {
-  @include nordic-cross-border(white, #ED2939, #0065BD);
-}
-// Fiji
-.flag-fji {
-}
-// Finland
-.flag-fin {
-  @include nordic-cross(white, #003580);
-}
-// France
-.flag-fra {
-  @include stripes-vertical-three(#002395, white, #ED2939);
-}
-// French Guiana
-.flag-guf {
-}
-// French Polynesia
-.flag-pyf {
-}
-// French Southern Territories
-.flag-atf {
-}
-// Gabon
-.flag-gab {
-  @include stripes-horizontal-three(#009E60, #FCD116, #3A75C4);
-}
-// Gambia
-.flag-gmb {
-}
-// Georgia
-.flag-geo {
-}
-// Germany
-.flag-deu {
-  @include stripes-horizontal-three(black, #DD0000, #FFCE00);
-}
-// Ghana
-.flag-gha {
-  @include stripes-horizontal-three(#CE1126, #FCD116, #006B3F);
-  &:before {
-    @include symbol-central-line("★", black)
-  }
-}
-// Gibraltar
-.flag-gib {
-}
-// Greece
-.flag-grc {
-}
-// Greenland
-.flag-grl {
-}
-// Grenada
-.flag-grd {
-}
-// Guadeloupe
-.flag-glp {
-}
-// Guam
-.flag-gum {
-}
-// Guatemala
-.flag-gtm {
-}
-// Guernsey
-.flag-ggy {
-}
-// Guinea
-.flag-gin {
-  @include stripes-vertical-three(#CE1126, #FCD116, #009460);
-}
-// Guinea-Bissau
-.flag-gnb {
-}
-// Guyana
-.flag-guy {
-}
-// Haiti
-.flag-hti {
-}
-// Heard Island and McDonald Islands
-.flag-hmd {
-}
-// Holy See (Vatican City State)
-.flag-vat {
-}
-// Honduras
-.flag-hnd {
-}
-// Hong Kong
-.flag-hkg {
-}
-// Hungary
-.flag-hun {
-  @include stripes-horizontal-three(red, white, green);
-}
-// Iceland
-.flag-isl {
-  @include nordic-cross-border(#003897, #D72828, white);
-}
-// India
-.flag-ind {
-}
-// Indonesia
-.flag-idn {
-}
-// Iran, Islamic Republic of
-.flag-irn {
-}
-// Iraq
-.flag-irq {
-}
-// Ireland
-.flag-irl {
-  @include stripes-vertical-three(green, white, orange);
-}
-// Isle of Man
-.flag-imn {
-}
-// Israel
-.flag-isr {
-}
-// Italy
-.flag-ita {
-  @include stripes-vertical-three(green, white, red);
-}
-// Jamaica
-.flag-jam {
-}
-// Japan
-.flag-jpn {
-}
-// Jersey
-.flag-jey {
-}
-// Jordan
-.flag-jor {
-}
-// Kazakhstan
-.flag-kaz {
-}
-// Kenya
-.flag-ken {
-}
-// Kiribati
-.flag-kir {
-}
-// Korea, Democratic People's Republic of
-.flag-prk {
-}
-// Korea, Republic of
-.flag-kor {
-}
-// Kuwait
-.flag-kwt {
-}
-// Kyrgyzstan
-.flag-kgz {
-}
-// Lao People's Democratic Republic
-.flag-lao {
-}
-// Latvia
-.flag-lva {
-}
-// Lebanon
-.flag-lbn {
-}
-// Lesotho
-.flag-lso {
-}
-// Liberia
-.flag-lbr {
-}
-// Libya
-.flag-lby {
-}
-// Liechtenstein
-.flag-lie {
-}
-// Lithuania
-.flag-ltu {
-  @include stripes-horizontal-three(yellow, green, red);
-}
-// Luxembourg
-.flag-lux {
-  @include stripes-horizontal-three(red, white, blue);
-}
-// Macao
-.flag-mac {
-}
-// Macedonia, the former Yugoslav Republic of
-.flag-mkd {
-}
-// Madagascar
-.flag-mdg {
-}
-// Malawi
-.flag-mwi {
-}
-// Malaysia
-.flag-mys {
-}
-// Maldives
-.flag-mdv {
-}
-// Mali
-.flag-mli {
-  @include stripes-vertical-three(green, yellow, red);
-}
-// Malta
-.flag-mlt {
-}
-// Marshall Islands
-.flag-mhl {
-}
-// Martinique
-.flag-mtq {
-}
-// Mauritania
-.flag-mrt {
-}
-// Mauritius
-.flag-mus {
-}
-// Mayotte
-.flag-myt {
-}
-// Mexico
-// TODO: Incomplete
-.flag-mex {
-  @include stripes-vertical-three(green, white, red);
-}
-// Micronesia, Federated States of
-.flag-fsm {
-}
-// Moldova, Republic of
-// TODO: Incomplete
-.flag-mda {
-  @include stripes-vertical-three(blue, yellow, red);
-}
-// Monaco
-.flag-mco {
-}
-// Mongolia
-.flag-mng {
-}
-// Montenegro
-.flag-mne {
-}
-// Montserrat
-.flag-msr {
-}
-// Morocco
-.flag-mar {
-  background:#C1272D;
-  &:before {
-    font-family: Symbol;
-    content: "\e800";
-    color:#006233;
-  }
-}
-// Mozambique
-.flag-moz {
-}
-// Myanmar
-.flag-mmr {
-}
-// Namibia
-.flag-nam {
-}
-// Nauru
-.flag-nru {
-}
-// Nepal
-.flag-npl {
-}
-// Netherlands
-.flag-nld {
-  @include stripes-horizontal-three(darkred, white, blue);
-}
-// New Caledonia
-.flag-ncl {
-}
-// New Zealand
-.flag-nzl {
-}
-// Nicaragua
-.flag-nic {
-}
-// Niger
-.flag-ner {
-}
-// Nigeria
-.flag-nga {
-}
-// Niue
-.flag-niu {
-}
-// Norfolk Island
-.flag-nfk {
-}
-// Northern Mariana Islands
-.flag-mnp {
-}
-// Norway
-.flag-nor {
-  @include nordic-cross-border(#ED2939, #002664, white);
-}
-// Oman
-.flag-omn {
-}
-// Pakistan
-.flag-pak {
-}
-// Palau
-.flag-plw {
-}
-// Palestine, State of
-.flag-pse {
-}
-// Panama
-.flag-pan {
-}
-// Papua New Guinea
-.flag-png {
-}
-// Paraguay
-.flag-pry {
-}
-// Peru
-.flag-per {
-}
-// Philippines
-.flag-phl {
-}
-// Pitcairn
-.flag-pcn {
-}
-// Poland
-.flag-pol {
-}
-// Portugal
-.flag-prt {
-}
-// Puerto Rico
-.flag-pri {
-}
-// Qatar
-.flag-qat {
-}
-// Réunion
-.flag-reu {
-}
-// Romania
-.flag-rou {
-  @include stripes-vertical-three(blue, yellow, red);
-}
-// Russian Federation
-.flag-rus {
-  @include stripes-horizontal-three(white, blue, red);
-}
-// Rwanda
-.flag-rwa {
-}
-// Saint Barthélemy
-.flag-blm {
-}
-// Saint Helena, Ascension and Tristan da Cunha
-.flag-shn {
-}
-// Saint Kitts and Nevis
-.flag-kna {
-}
-// Saint Lucia
-.flag-lca {
-}
-// Saint Martin (French part)
-.flag-maf {
-}
-// Saint Pierre and Miquelon
-.flag-spm {
-}
-// Saint Vincent and the Grenadines
-.flag-vct {
-}
-// Samoa
-.flag-wsm {
-}
-// San Marino
-.flag-smr {
-}
-// Sao Tome and Principe
-.flag-stp {
-}
-// Saudi Arabia
-.flag-sau {
-}
-// Senegal
-.flag-sen {
-  @include stripes-vertical-three(green, yellow, red);
-  &:before {
-    @include symbol-central-column("★", green)
-  }
-}
-// Serbia
-.flag-srb {
-}
-// Seychelles
-.flag-syc {
-}
-// Sierra Leone
-.flag-sle {
-  @include stripes-horizontal-three(green, white, blue);
-}
-// Singapore
-.flag-sgp {
-}
-// Sint Maarten (Dutch part)
-.flag-sxm {
-}
-// Slovakia
-.flag-svk {
-}
-// Slovenia
-.flag-svn {
-}
-// Solomon Islands
-.flag-slb {
-}
-// Somalia
-.flag-som {
-}
-// South Africa
-.flag-zaf {
-}
-// South Georgia and the South Sandwich Islands
-.flag-sgs {
-}
-// South Sudan
-.flag-ssd {
-}
-// Spain
-.flag-esp {
-}
-// Sri Lanka
-.flag-lka {
-}
-// Sudan
-.flag-sdn {
-}
-// Suriname
-.flag-sur {
-}
-// Svalbard and Jan Mayen
-.flag-sjm {
-}
-// Swaziland
-.flag-swz {
-}
-// Sweden
-.flag-swe {
-  @include nordic-cross(blue, yellow);
-}
-// Switzerland
-.flag-che {
-}
-// Syrian Arab Republic
-.flag-syr {
-}
-// Taiwan, Province of China
-.flag-twn {
-}
-// Tajikistan
-.flag-tjk {
-}
-// Tanzania, United Republic of
-.flag-tza {
-}
-// Thailand
-.flag-tha {
-}
-// Timor-Leste
-.flag-tls {
-}
-// Togo
-.flag-tgo {
-}
-// Tokelau
-.flag-tkl {
-}
-// Tonga
-.flag-ton {
-}
-// Trinidad and Tobago
-.flag-tto {
-}
-// Tunisia
-.flag-tun {
-}
-// Turkey
-.flag-tur {
-}
-// Turkmenistan
-.flag-tkm {
-}
-// Turks and Caicos Islands
-.flag-tca {
-}
-// Tuvalu
-.flag-tuv {
-}
-// Uganda
-.flag-uga {
-}
-// Ukraine
-.flag-ukr {
-}
-// United Arab Emirates
-.flag-are {
-}
-// United Kingdom
-.flag-gbr {
-}
-// United States
-.flag-usa {
-}
-// United States Minor Outlying Islands
-.flag-umi {
-}
-// Uruguay
-.flag-ury {
-}
-// Uzbekistan
-.flag-uzb {
-}
-// Vanuatu
-.flag-vut {
-}
-// Venezuela, Bolivarian Republic of
-.flag-ven {
-}
-// Viet Nam
-.flag-vnm {
-}
-// Virgin Islands, British
-.flag-vgb {
-}
-// Virgin Islands, U.S.
-.flag-vir {
-}
-// Wallis and Futuna
-.flag-wlf {
-}
-// Western Sahara
-.flag-esh {
-}
-// Yemen
-.flag-yem {
-  @include stripes-horizontal-three(#CE1126, white, black);
-}
-// Zambia
-.flag-zmb {
-}
-// Zimbabwe
-.flag-zwe {
-}
+@import '_variables';
+@import '_mixins';
+@import '_fonts';
+@import '_layout';
+@import '_flags';
