--- a/app/css/_variables.scss
+++ b/app/css/_variables.scss
@@ -4,4 +4,5 @@ $flagWidth: 220px;
 $flagHeight: 160px;
 $columnThird: ($flagWidth / 3);
 $lineThird: ($flagHeight / 3);
+$lineQuarter: ($flagHeight / 4);
 
